@@ -160,7 +160,7 @@ bool CALLBACK_HID_Device_CreateHIDReport(USB_ClassInfo_HID_Device_t* const HIDIn
 	  JoystickReport->X =  100;
 
 	if (JoyStatus_LCL & JOY_PRESS)
-	  JoystickReport->Button  = (1 << 1);
+	  JoystickReport->Button |= (1 << 1);
 
 	if (ButtonStatus_LCL & BUTTONS_BUTTON1)
 	  JoystickReport->Button |= (1 << 0);
